Version 1.7.0-dev
  * Pass all headers listed in the attributes parameter from the
  [security] section to the hosts listed in the hosts parameter of the
  same section (ticket #139)

Version 1.6.0
  * Add the C# as a supported programming language for Services 
  * Add nested inputs and outputs support (WPS 2.0.0)
  * Add servicePath special key to specify the service location
  * Add the PHP version 7 support
  * Add --with-etc-dir option to specify the location of the main.cfg file
  * Support GDAL version 2.1.0.
  * Add the MapServer 7.0.1 internal support.
  * Support for exotic location of openssl.
  * Add ZOO-Client API documentation reference in the official documentation.
  * Add CORS support.
  * Fix issue when dealing with Array in JavaScript support.
  * Update the Centos installation procedure.
  * Small fixes in java support.
  * Fix issue when XML request contains empty nodes for inputs
  * Add status update for contour lines computation
  * Fix FASTCGI location using the --with-fastcgi option.
  * Redefined the API function addToMapWithSize to fix problem with Python/PHP support.

Version 1.5.0
  * Complete rewrite of the documentation to use modern style
  * Fix asynchronous POST request on WIN32 platforms
  * Add utils/registry service
  * Initial support for WPS 2.0.0 including the Dismiss extension
  * Fix concurrency access to status information
  * Use simple file rather than shared memory for storing status information
  * Add support for db backend to store status information
  * Add the lib_zoo_service shared library to be linked against C services
  * Add ZOO-API for the PHP language (with documentation)
  * Add doxygen comments in source code
  * Add support for multiple Exception nodes
  * Add a length key when creating MapArray
  * Add OTB support for applications as a service
  * Add the otb2zcfg utility to produce zcfg for otb applications
  * Add OTB Application Observer to have progress status updates
  * Fix maxOccurs handling